changes to stylesheet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,7 +79,7 @@ input[type="button"]{
 	background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-	padding: .5em 1em;
+	padding: .5emgit push -u origin master 1em;
   text-align: center;
   text-decoration: none;
   display: inline-block;
